--- a/environment.yml
+++ b/environment.yml
@@ -3,262 +3,323 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - _sysroot_linux-64_curr_repodata_hack=3
-  - alsa-lib=1.2.12
-  - attr=2.5.1
-  - binutils_impl_linux-64=2.40
-  - binutils_linux-64=2.40
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - bzip2=1.0.8
-  - c-ares=1.32.3
-  - ca-certificates=2024.7.4
-  - cairo=1.18.0
-  - contourpy=1.2.0
-  - cuda-cccl_linux-64=12.5.39
-  - cuda-crt-dev_linux-64=12.5.82
-  - cuda-crt-tools=12.5.82
-  - cuda-cudart=12.5.82
-  - cuda-cudart-dev=12.5.82
-  - cuda-cudart-dev_linux-64=12.5.82
-  - cuda-cudart-static=12.5.82
-  - cuda-cudart-static_linux-64=12.5.82
-  - cuda-cudart_linux-64=12.5.82
-  - cuda-cupti=12.5.82
-  - cuda-driver-dev_linux-64=12.5.82
-  - cuda-nvcc=12.5.82
-  - cuda-nvcc-dev_linux-64=12.5.82
-  - cuda-nvcc-impl=12.5.82
-  - cuda-nvcc-tools=12.5.82
-  - cuda-nvcc_linux-64=12.5.82
-  - cuda-nvrtc=12.5.82
-  - cuda-nvtx=12.5.82
-  - cuda-nvvm-dev_linux-64=12.5.82
-  - cuda-nvvm-impl=12.5.82
-  - cuda-nvvm-tools=12.5.82
-  - cuda-version=12.5
-  - cudnn=8.9.7.29
-  - cycler=0.11.0
-  - dbus=1.13.18
-  - eigen=3.4.0
-  - expat=2.6.2
-  - fenics=2019.1.0
-  - fenics-dijitso=2019.1.0
-  - fenics-dolfin=2019.1.0
-  - fenics-ffc=2019.1.0
-  - fenics-fiat=2019.1.0
-  - fenics-libdolfin=2019.1.0
-  - fenics-ufl=2019.1.0
-  - fftw=3.3.10
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=2.001
-  - font-ttf-source-code-pro=2.030
-  - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.2
-  - fonts-anaconda=1
-  - fonts-conda-ecosystem=1
-  - fonttools=4.51.0
-  - freetype=2.12.1
-  - gcc=12.4.0
-  - gcc_impl_linux-64=12.4.0
-  - gcc_linux-64=12.4.0
-  - gettext=0.22.5
-  - gettext-tools=0.22.5
-  - glib=2.80.3
-  - glib-tools=2.80.3
-  - gmp=6.3.0
-  - gmpy2=2.1.5
-  - graphite2=1.3.14
-  - gst-plugins-base=1.24.5
-  - gstreamer=1.24.5
-  - gxx=12.4.0
-  - gxx_impl_linux-64=12.4.0
-  - gxx_linux-64=12.4.0
-  - harfbuzz=9.0.0
-  - hdf5=1.14.3
-  - hypre=2.31.0
-  - icu=73.2
-  - importlib-metadata=8.2.0
-  - importlib_metadata=8.2.0
-  - jax=0.4.28
-  - jaxlib=0.4.28
-  - joblib=1.4.2
-  - kernel-headers_linux-64=3.10.0
-  - keyutils=1.6.1
-  - kiwisolver=1.4.4
-  - krb5=1.21.3
-  - lame=3.100
-  - lcms2=2.16
-  - ld_impl_linux-64=2.40
-  - lerc=4.0.0
-  - libabseil=20240116.2
-  - libaec=1.1.3
-  - libasprintf=0.22.5
-  - libasprintf-devel=0.22.5
-  - libblas=3.9.0
-  - libboost=1.84.0
-  - libboost-headers=1.85.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libcap=2.69
-  - libcblas=3.9.0
-  - libclang-cpp15=15.0.7
-  - libclang13=18.1.8
-  - libcublas=12.5.3.2
-  - libcufft=11.2.3.61
-  - libcups=2.3.3
-  - libcurand=10.3.6.82
-  - libcurl=8.9.0
-  - libcusolver=11.6.3.83
-  - libcusparse=12.5.1.3
-  - libdeflate=1.20
-  - libedit=3.1.20191231
-  - libev=4.33
-  - libevent=2.1.12
-  - libexpat=2.6.2
-  - libffi=3.4.2
-  - libflac=1.4.3
-  - libgcc-devel_linux-64=12.4.0
-  - libgcc-ng=14.1.0
-  - libgcrypt=1.11.0
-  - libgettextpo=0.22.5
-  - libgettextpo-devel=0.22.5
-  - libgfortran-ng=14.1.0
-  - libgfortran5=14.1.0
-  - libglib=2.80.3
-  - libgomp=14.1.0
-  - libgpg-error=1.50
-  - libgrpc=1.62.2
-  - libhwloc=2.11.1
-  - libiconv=1.17
-  - libjpeg-turbo=3.0.3
-  - liblapack=3.9.0
-  - libllvm15=15.0.7
-  - libllvm18=18.1.8
-  - libnghttp2=1.58.0
-  - libnsl=2.0.1
-  - libnvjitlink=12.5.82
-  - libogg=1.3.5
-  - libopenblas=0.3.27
-  - libopus=1.3.1
-  - libpng=1.6.43
-  - libpq=16.3
-  - libprotobuf=4.25.3
-  - libptscotch=7.0.4
-  - libre2-11=2023.09.01
-  - libsanitizer=12.4.0
-  - libscotch=7.0.4
-  - libsndfile=1.2.2
-  - libsqlite=3.46.0
-  - libssh2=1.11.0
-  - libstdcxx-devel_linux-64=12.4.0
-  - libstdcxx-ng=14.1.0
-  - libsystemd0=255
-  - libtiff=4.6.0
-  - libuuid=2.38.1
-  - libvorbis=1.3.7
-  - libwebp-base=1.4.0
-  - libxcb=1.16
-  - libxcrypt=4.4.36
-  - libxkbcommon=1.7.0
-  - libxml2=2.12.7
-  - libzlib=1.3.1
-  - lz4-c=1.9.4
-  - matplotlib=3.8.4
-  - matplotlib-base=3.8.4
-  - metis=5.1.0
-  - ml_dtypes=0.4.0
-  - mpc=1.3.1
-  - mpfr=4.2.1
-  - mpg123=1.32.6
-  - mpi=1.0
-  - mpi4py=3.1.6
-  - mpmath=1.3.0
-  - mumps-include=5.7.1
-  - mumps-mpi=5.7.1
-  - mysql-common=8.3.0
-  - mysql-libs=8.3.0
-  - nccl=2.22.3.1
-  - ncurses=6.5
-  - nlopt=2.7.1
-  - nspr=4.35
-  - nss=3.102
-  - numpy=1.26.4
-  - openjpeg=2.5.2
-  - openmpi=4.1.6
-  - openssl=3.3.1
-  - opt-einsum=3.3.0
-  - opt_einsum=3.3.0
-  - packaging=24.1
-  - parmetis=4.0.3
-  - pcre2=10.44
-  - petsc=3.21.2
-  - petsc4py=3.21.2
-  - pillow=10.4.0
-  - pip=24.0
-  - pixman=0.43.2
-  - pkg-config=0.29.2
-  - pkgconfig=1.5.5
-  - ply=3.11
-  - pthread-stubs=0.3
-  - ptscotch=7.0.4
-  - pulseaudio-client=17.0
-  - pybind11=2.12.0
-  - pybind11-global=2.12.0
-  - pyparsing=3.0.9
-  - pyqt=5.15.10
-  - pyqt5-sip=12.13.0
-  - python=3.11.9
-  - python-dateutil=2.9.0post0
-  - python_abi=3.11
-  - qt-main=5.15.8
-  - re2=2023.09.01
-  - readline=8.2
-  - scalapack=2.2.0
-  - scikit-learn=1.5.1
-  - scipy=1.14.0
-  - scotch=7.0.4
-  - setuptools=71.0.4
-  - sip=6.7.12
-  - six=1.16.0
-  - slepc=3.21.1
-  - slepc4py=3.21.1
-  - suitesparse=7.7.0
-  - superlu=5.2.2
-  - superlu_dist=8.2.1
-  - sympy=1.13.0
-  - sysroot_linux-64=2.17
-  - tbb=2021.12.0
-  - threadpoolctl=3.5.0
-  - tk=8.6.13
-  - tornado=6.4.1
-  - tzdata=2024a
-  - unicodedata2=15.1.0
-  - wheel=0.43.0
-  - xcb-util=0.4.1
-  - xcb-util-image=0.4.0
-  - xcb-util-keysyms=0.4.1
-  - xcb-util-renderutil=0.3.10
-  - xcb-util-wm=0.4.2
-  - xkeyboard-config=2.42
-  - xorg-kbproto=1.0.7
-  - xorg-libice=1.1.1
-  - xorg-libsm=1.2.4
-  - xorg-libx11=1.8.9
-  - xorg-libxau=1.0.11
-  - xorg-libxdmcp=1.1.3
-  - xorg-libxext=1.3.4
-  - xorg-libxrender=0.9.11
-  - xorg-renderproto=0.11.1
-  - xorg-xextproto=7.3.0
-  - xorg-xf86vidmodeproto=2.3.1
-  - xorg-xproto=7.0.31
-  - xz=5.2.6
-  - yaml=0.2.5
-  - zipp=3.19.2
-  - zlib=1.3.1
-  - zstd=1.5.6
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - _sysroot_linux-64_curr_repodata_hack=3=h69a702a_16
+  - alsa-lib=1.2.12=h4ab18f5_0
+  - asttokens=3.0.0=pyhd8ed1ab_1
+  - attr=2.5.1=h166bdaf_1
+  - binutils_impl_linux-64=2.40=ha1999f0_7
+  - binutils_linux-64=2.40=hb3c18ed_0
+  - blas=1.0=openblas
+  - bottleneck=1.4.2=py311hf4808d0_0
+  - brotli=1.0.9=h5eee18b_8
+  - brotli-bin=1.0.9=h5eee18b_8
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.32.3=h4bc722e_0
+  - ca-certificates=2025.2.25=h06a4308_0
+  - cairo=1.18.0=hbb29018_2
+  - cffi=1.17.1=py311h1fdaa30_0
+  - colorama=0.4.6=py311h06a4308_0
+  - comm=0.2.2=pyhd8ed1ab_1
+  - contourpy=1.2.0=py311hdb19cb5_0
+  - cryptography=43.0.0=py311hdda0065_0
+  - cuda-cccl_linux-64=12.5.39=ha770c72_0
+  - cuda-crt-dev_linux-64=12.5.82=ha770c72_0
+  - cuda-crt-tools=12.5.82=ha770c72_0
+  - cuda-cudart=12.5.82=he02047a_0
+  - cuda-cudart-dev=12.5.82=he02047a_0
+  - cuda-cudart-dev_linux-64=12.5.82=h85509e4_0
+  - cuda-cudart-static=12.5.82=he02047a_0
+  - cuda-cudart-static_linux-64=12.5.82=h85509e4_0
+  - cuda-cudart_linux-64=12.5.82=h85509e4_0
+  - cuda-cupti=12.5.82=he02047a_0
+  - cuda-driver-dev_linux-64=12.5.82=h85509e4_0
+  - cuda-nvcc=12.5.82=hcdd1206_0
+  - cuda-nvcc-dev_linux-64=12.5.82=ha770c72_0
+  - cuda-nvcc-impl=12.5.82=hd3aeb46_0
+  - cuda-nvcc-tools=12.5.82=hd3aeb46_0
+  - cuda-nvcc_linux-64=12.5.82=h8a487aa_0
+  - cuda-nvrtc=12.5.82=he02047a_0
+  - cuda-nvtx=12.5.82=he02047a_0
+  - cuda-nvvm-dev_linux-64=12.5.82=ha770c72_0
+  - cuda-nvvm-impl=12.5.82=h59595ed_0
+  - cuda-nvvm-tools=12.5.82=h59595ed_0
+  - cuda-version=12.5=hd4f0392_3
+  - cudnn=8.9.7.29=h092f7fd_3
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.8.12=py311hfdbb021_0
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - dnspython=2.4.2=py311h06a4308_0
+  - docopt=0.6.2=py311h06a4308_1
+  - eigen=3.4.0=h00ab1b0_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_1
+  - executing=2.1.0=pyhd8ed1ab_1
+  - expat=2.6.2=h6a678d5_0
+  - fenics=2019.1.0=h8783aee_48
+  - fenics-dijitso=2019.1.0=pyhd8ed1ab_39
+  - fenics-dolfin=2019.1.0=py311h57ea513_48
+  - fenics-ffc=2019.1.0=pyhd8ed1ab_39
+  - fenics-fiat=2019.1.0=pyhd8ed1ab_39
+  - fenics-libdolfin=2019.1.0=h894a989_48
+  - fenics-ufl=2019.1.0=py311h38be061_38
+  - fftw=3.3.10=mpi_openmpi_h4a81ba8_9
+  - flexcache=0.3=pyhd8ed1ab_1
+  - flexparser=0.4=pyhd8ed1ab_1
+  - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
+  - font-ttf-inconsolata=2.001=hcb22688_0
+  - font-ttf-source-code-pro=2.030=hd3eb1b0_0
+  - font-ttf-ubuntu=0.83=h8b1ccd4_0
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-anaconda=1=h8fa9717_0
+  - fonts-conda-ecosystem=1=hd3eb1b0_0
+  - fonttools=4.51.0=py311h5eee18b_0
+  - freetype=2.12.1=h267a509_2
+  - gcc=12.4.0=h236703b_0
+  - gcc_impl_linux-64=12.4.0=hb2e57f8_0
+  - gcc_linux-64=12.4.0=h6b7512a_0
+  - gettext=0.22.5=h59595ed_2
+  - gettext-tools=0.22.5=h59595ed_2
+  - gitdb=4.0.7=pyhd3eb1b0_0
+  - gitpython=3.1.43=py311h06a4308_0
+  - glib=2.80.3=h8a4344b_1
+  - glib-tools=2.80.3=h73ef956_1
+  - gmp=6.3.0=hac33072_2
+  - gmpy2=2.1.5=py311hc4f1f91_1
+  - graphite2=1.3.14=h295c915_1
+  - gst-plugins-base=1.24.5=hbaaba92_0
+  - gstreamer=1.24.5=haf2f30d_0
+  - gxx=12.4.0=h236703b_0
+  - gxx_impl_linux-64=12.4.0=h557a472_0
+  - gxx_linux-64=12.4.0=h8489865_0
+  - harfbuzz=9.0.0=hfac3d4d_0
+  - hdf5=1.14.3=mpi_openmpi_hf5a2fd3_4
+  - hypre=2.31.0=mpi_openmpi_h900e7ac_0
+  - icu=73.2=h59595ed_0
+  - idna=3.7=py311h06a4308_0
+  - importlib-metadata=8.2.0=pyha770c72_0
+  - importlib_metadata=8.2.0=hd8ed1ab_0
+  - ipykernel=6.29.5=py311h06a4308_1
+  - ipython=8.32.0=pyh907856f_0
+  - jax=0.4.28=pyhd8ed1ab_0
+  - jaxlib=0.4.28=cuda120py311had15d7a_200
+  - jedi=0.19.2=pyhd8ed1ab_1
+  - joblib=1.4.2=pyhd8ed1ab_0
+  - jsonpickle=2.2.0=py311h06a4308_0
+  - jupyter_client=8.6.3=pyhd8ed1ab_1
+  - jupyter_core=5.7.2=pyh31011fe_1
+  - kernel-headers_linux-64=3.10.0=h4a8ded7_16
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.4=py311h6a678d5_0
+  - krb5=1.21.3=h659f571_0
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.16=hb7c19ff_0
+  - ld_impl_linux-64=2.40=hf3520f5_7
+  - lerc=4.0.0=h27087fc_0
+  - libabseil=20240116.2=cxx17_he02047a_1
+  - libaec=1.1.3=h59595ed_0
+  - libasprintf=0.22.5=h661eb56_2
+  - libasprintf-devel=0.22.5=h661eb56_2
+  - libblas=3.9.0=23_linux64_openblas
+  - libboost=1.84.0=hba137d9_3
+  - libboost-headers=1.85.0=ha770c72_3
+  - libbrotlicommon=1.0.9=h5eee18b_8
+  - libbrotlidec=1.0.9=h5eee18b_8
+  - libbrotlienc=1.0.9=h5eee18b_8
+  - libcap=2.69=h0f662aa_0
+  - libcblas=3.9.0=23_linux64_openblas
+  - libclang-cpp15=15.0.7=default_h127d8a8_5
+  - libclang13=18.1.8=default_h9def88c_1
+  - libcublas=12.5.3.2=he02047a_0
+  - libcufft=11.2.3.61=he02047a_0
+  - libcups=2.3.3=h4637d8d_4
+  - libcurand=10.3.6.82=he02047a_0
+  - libcurl=8.9.0=hdb1bdb2_0
+  - libcusolver=11.6.3.83=he02047a_0
+  - libcusparse=12.5.1.3=he02047a_0
+  - libdeflate=1.20=hd590300_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=hd590300_2
+  - libevent=2.1.12=hdbd6064_1
+  - libexpat=2.6.2=h59595ed_0
+  - libffi=3.4.2=h7f98852_5
+  - libflac=1.4.3=h59595ed_0
+  - libgcc=14.2.0=h767d61c_2
+  - libgcc-devel_linux-64=12.4.0=ha4f9413_100
+  - libgcc-ng=14.2.0=h69a702a_2
+  - libgcrypt=1.11.0=h4ab18f5_1
+  - libgettextpo=0.22.5=h59595ed_2
+  - libgettextpo-devel=0.22.5=h59595ed_2
+  - libgfortran-ng=14.1.0=h69a702a_0
+  - libgfortran5=14.1.0=hc5f4f2c_0
+  - libglib=2.80.3=h8a4344b_1
+  - libgomp=14.2.0=h767d61c_2
+  - libgpg-error=1.50=h4f305b6_0
+  - libgrpc=1.62.2=h15f2491_0
+  - libhwloc=2.11.1=default_hecaa2ac_1000
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.3=h5eee18b_0
+  - liblapack=3.9.0=23_linux64_openblas
+  - libllvm15=15.0.7=hb3ce162_4
+  - libllvm18=18.1.8=h8b73ec9_1
+  - libnghttp2=1.58.0=h47da74e_1
+  - libnsl=2.0.1=hd590300_0
+  - libnvjitlink=12.5.82=he02047a_0
+  - libogg=1.3.5=h27cfd23_1
+  - libopenblas=0.3.27=pthreads_hac2b453_1
+  - libopus=1.3.1=h7b6447c_0
+  - libpng=1.6.43=h2797004_0
+  - libpq=16.3=ha72fbe1_0
+  - libprotobuf=4.25.3=h08a7969_0
+  - libptscotch=7.0.4=h4eaa18c_2
+  - libre2-11=2023.09.01=h5a48ba9_2
+  - libsanitizer=12.4.0=h46f95d5_0
+  - libscotch=7.0.4=h0c89965_2
+  - libsndfile=1.2.2=hc60ed4a_1
+  - libsodium=1.0.20=h4ab18f5_0
+  - libsqlite=3.46.0=hde9e2c9_0
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx=14.2.0=h8f9b012_2
+  - libstdcxx-devel_linux-64=12.4.0=ha4f9413_100
+  - libstdcxx-ng=14.2.0=h4852527_2
+  - libsystemd0=255=h3516f8a_1
+  - libtiff=4.6.0=h1dd3fc0_3
+  - libuuid=2.38.1=h0b41bf4_0
+  - libvorbis=1.3.7=h7b6447c_0
+  - libwebp-base=1.4.0=hd590300_0
+  - libxcb=1.16=hd590300_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.7.0=h2c5496b_1
+  - libxml2=2.12.7=h4c95cb1_3
+  - libzlib=1.3.1=h4ab18f5_1
+  - lz4-c=1.9.4=h6a678d5_1
+  - matplotlib=3.8.4=py311h06a4308_0
+  - matplotlib-base=3.8.4=py311ha02d727_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
+  - metis=5.1.0=h59595ed_1007
+  - ml_dtypes=0.4.0=py311h14de704_1
+  - mpc=1.3.1=hfe3b2da_0
+  - mpfr=4.2.1=h9458935_1
+  - mpg123=1.32.6=h59595ed_0
+  - mpi=1.0=openmpi
+  - mpi4py=3.1.6=py311h4267d7f_0
+  - mpmath=1.3.0=pyhd8ed1ab_0
+  - mumps-include=5.7.1=ha770c72_0
+  - mumps-mpi=5.7.1=hcb8ae40_0
+  - munch=2.5.0=pyhd3eb1b0_0
+  - mysql-common=8.3.0=h70512c7_5
+  - mysql-libs=8.3.0=ha479ceb_5
+  - nccl=2.22.3.1=hbc370b7_0
+  - ncurses=6.5=h59595ed_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - nlopt=2.7.1=py311he50ff42_5
+  - nspr=4.35=h6a678d5_0
+  - nss=3.102=h593d115_0
+  - numexpr=2.10.1=py311hd28fd6d_0
+  - numpy=1.26.4=py311h64a7726_0
+  - openjpeg=2.5.2=h488ebb8_0
+  - openmpi=4.1.6=hc5af2df_101
+  - openssl=3.4.1=h7b32b05_0
+  - opt-einsum=3.3.0=hd8ed1ab_2
+  - opt_einsum=3.3.0=pyhc1e730c_2
+  - packaging=24.1=py311h06a4308_0
+  - pandas=2.2.3=py311h6a678d5_0
+  - parmetis=4.0.3=he9a3056_1005
+  - parso=0.8.4=pyhd8ed1ab_1
+  - pcre2=10.44=h0f59acf_0
+  - petsc=3.21.2=real_hd0ea2e5_100
+  - petsc4py=3.21.2=py311he6cfc66_0
+  - pexpect=4.9.0=pyhd8ed1ab_1
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
+  - pillow=10.4.0=py311h82a398c_0
+  - pint=0.24.4=pyhd8ed1ab_1
+  - pint-pandas=0.7.1=pyhd8ed1ab_0
+  - pip=24.0=pyhd8ed1ab_0
+  - pixman=0.43.2=h59595ed_0
+  - pkg-config=0.29.2=h4bc722e_1009
+  - pkgconfig=1.5.5=pyhd8ed1ab_4
+  - platformdirs=4.3.6=pyhd8ed1ab_1
+  - ply=3.11=py311h06a4308_0
+  - prompt-toolkit=3.0.50=pyha770c72_0
+  - psutil=7.0.0=py311h9ecbd09_0
+  - pthread-stubs=0.3=h0ce48e5_1
+  - ptscotch=7.0.4=hd53efc5_2
+  - ptyprocess=0.7.0=pyhd8ed1ab_1
+  - pulseaudio-client=17.0=hb77b528_0
+  - pure_eval=0.2.3=pyhd8ed1ab_1
+  - py-cpuinfo=9.0.0=py311h06a4308_0
+  - pybind11=2.12.0=py311h9547e67_0
+  - pybind11-global=2.12.0=py311h9547e67_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.19.1=pyhd8ed1ab_0
+  - pymongo=4.8.0=py311h5eee18b_0
+  - pyparsing=3.0.9=py311h06a4308_0
+  - pyqt=5.15.10=py311h6a678d5_0
+  - pyqt5-sip=12.13.0=py311h5eee18b_0
+  - python=3.11.9=hb806964_0_cpython
+  - python-dateutil=2.9.0post0=py311h06a4308_2
+  - python-tzdata=2023.3=pyhd3eb1b0_0
+  - python_abi=3.11=4_cp311
+  - pytz=2024.1=py311h06a4308_0
+  - pyzmq=26.2.1=py311h7deb3e3_0
+  - qt-main=5.15.8=h320f8da_24
+  - re2=2023.09.01=h7f4b329_2
+  - readline=8.2=h8228510_1
+  - sacred=0.8.5=pyhd8ed1ab_0
+  - scalapack=2.2.0=h67de57e_1
+  - scikit-learn=1.5.1=py311hd632256_0
+  - scipy=1.14.0=py311h517d4fd_1
+  - scotch=7.0.4=hd53efc5_2
+  - setuptools=71.0.4=pyhd8ed1ab_0
+  - sip=6.7.12=py311h6a678d5_0
+  - six=1.16.0=pyh6c4a22f_0
+  - slepc=3.21.1=real_h4e5f841_301
+  - slepc4py=3.21.1=py311hc1ef5fc_101
+  - smmap=4.0.0=pyhd3eb1b0_0
+  - stack_data=0.6.3=pyhd8ed1ab_1
+  - suitesparse=7.7.0=hf4753ba_1
+  - superlu=5.2.2=h00795ac_0
+  - superlu_dist=8.2.1=h511944b_1
+  - sympy=1.13.0=pypyh2585a3b_103
+  - sysroot_linux-64=2.17=h4a8ded7_16
+  - tbb=2021.12.0=h434a139_3
+  - threadpoolctl=3.5.0=pyhc1e730c_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - tornado=6.4.1=py311h5eee18b_0
+  - tqdm=4.66.4=py311h92b7b1e_0
+  - traitlets=5.14.3=pyhd8ed1ab_1
+  - typing-extensions=4.12.2=hd8ed1ab_1
+  - typing_extensions=4.12.2=pyha770c72_1
+  - tzdata=2024a=h0c530f3_0
+  - unicodedata2=15.1.0=py311h5eee18b_0
+  - wcwidth=0.2.13=pyhd8ed1ab_1
+  - wheel=0.43.0=pyhd8ed1ab_1
+  - wrapt=1.14.1=py311h5eee18b_0
+  - xcb-util=0.4.1=hb711507_2
+  - xcb-util-image=0.4.0=hb711507_2
+  - xcb-util-keysyms=0.4.1=hb711507_0
+  - xcb-util-renderutil=0.3.10=hb711507_0
+  - xcb-util-wm=0.4.2=hb711507_0
+  - xkeyboard-config=2.42=h4ab18f5_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.1.1=hd590300_0
+  - xorg-libsm=1.2.4=h7391055_0
+  - xorg-libx11=1.8.9=hb711507_1
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
+  - xorg-xproto=7.0.31=h27cfd23_1007
+  - xz=5.2.6=h166bdaf_0
+  - yaml=0.2.5=h7f98852_2
+  - zeromq=4.3.5=h3b0a872_7
+  - zipp=3.19.2=pyhd8ed1ab_0
+  - zlib=1.3.1=h4ab18f5_1
+  - zstd=1.5.6=ha6fb4c9_0
+  - pip:
+      - python-dotenv==1.0.1
 prefix: /home/graphitical/miniconda3/envs/meta_design
