--- a/environment.yml
+++ b/environment.yml
@@ -7,22 +7,26 @@ dependencies:
   - _openmp_mutex=4.5=2_gnu
   - _sysroot_linux-64_curr_repodata_hack=3=h69a702a_16
   - alsa-lib=1.2.12=h4ab18f5_0
-  - asttokens=3.0.0=pyhd8ed1ab_2
+  - ansi2html=1.9.1=py311h06a4308_0
+  - aom=3.9.1=hac33072_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
   - attr=2.5.1=h166bdaf_1
   - binutils_impl_linux-64=2.40=ha1999f0_7
   - binutils_linux-64=2.40=hb3c18ed_0
-  - blas=1.0=openblas
-  - bottleneck=1.4.2=py311hf4808d0_0
-  - brotli=1.0.9=h5eee18b_8
-  - brotli-bin=1.0.9=h5eee18b_8
+  - brotli=1.0.9=h166bdaf_9
+  - brotli-bin=1.0.9=h166bdaf_9
+  - brotli-python=1.0.9=py311h6a678d5_8
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.32.3=h4bc722e_0
-  - ca-certificates=2025.2.25=h06a4308_0
+  - ca-certificates=2025.1.31=hbcca054_0
   - cairo=1.18.0=hbb29018_2
-  - cffi=1.17.1=py311h1fdaa30_0
+  - certifi=2025.1.31=pyhd8ed1ab_0
+  - cffi=1.16.0=py311h5eee18b_1
+  - charset-normalizer=3.3.2=pyhd3eb1b0_0
+  - click=8.1.7=py311h06a4308_0
   - colorama=0.4.6=py311h06a4308_0
-  - comm=0.2.2=pyhd8ed1ab_1
-  - contourpy=1.2.0=py311hdb19cb5_0
+  - comm=0.2.2=pyhd8ed1ab_0
+  - contourpy=1.2.0=py311h9547e67_1
   - cryptography=43.0.0=py311hdda0065_0
   - cuda-cccl_linux-64=12.5.39=ha770c72_0
   - cuda-crt-dev_linux-64=12.5.82=ha770c72_0
@@ -47,16 +51,17 @@ dependencies:
   - cuda-nvvm-tools=12.5.82=h59595ed_0
   - cuda-version=12.5=hd4f0392_3
   - cudnn=8.9.7.29=h092f7fd_3
-  - cycler=0.11.0=pyhd3eb1b0_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dav1d=1.2.1=hd590300_0
   - dbus=1.13.18=hb2f20db_0
-  - debugpy=1.8.12=py311hfdbb021_0
-  - decorator=5.2.1=pyhd8ed1ab_0
-  - dnspython=2.4.2=py311h06a4308_0
+  - debugpy=1.8.5=py311hf86e51f_0
+  - decorator=5.1.1=pyhd8ed1ab_0
   - docopt=0.6.2=py311h06a4308_1
+  - dolfin-adjoint=2019.1.0=py_0
   - eigen=3.4.0=h00ab1b0_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - executing=2.1.0=pyhd8ed1ab_1
-  - expat=2.6.2=h6a678d5_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_0
+  - executing=2.1.0=pyhd8ed1ab_0
+  - expat=2.6.2=h59595ed_0
   - fenics=2019.1.0=h8783aee_48
   - fenics-dijitso=2019.1.0=pyhd8ed1ab_39
   - fenics-dolfin=2019.1.0=py311h57ea513_48
@@ -64,18 +69,24 @@ dependencies:
   - fenics-fiat=2019.1.0=pyhd8ed1ab_39
   - fenics-libdolfin=2019.1.0=h894a989_48
   - fenics-ufl=2019.1.0=py311h38be061_38
+  - ffmpeg=6.1.2=gpl_h3e00e3c_103
   - fftw=3.3.10=mpi_openmpi_h4a81ba8_9
+  - flask=3.0.3=py311h06a4308_0
+  - flask-compress=1.13=py311h06a4308_0
   - flexcache=0.3=pyhd8ed1ab_1
   - flexparser=0.4=pyhd8ed1ab_1
-  - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
-  - font-ttf-inconsolata=2.001=hcb22688_0
-  - font-ttf-source-code-pro=2.030=hd3eb1b0_0
-  - font-ttf-ubuntu=0.83=h8b1ccd4_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=2.001=hab24e00_0
+  - font-ttf-source-code-pro=2.030=hab24e00_0
+  - font-ttf-ubuntu=0.83=h77eed37_2
   - fontconfig=2.14.2=h14ed4e7_0
   - fonts-anaconda=1=h8fa9717_0
-  - fonts-conda-ecosystem=1=hd3eb1b0_0
-  - fonttools=4.51.0=py311h5eee18b_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.51.0=py311h459d7ec_0
+  - freeglut=3.2.2=ha6d2627_3
   - freetype=2.12.1=h267a509_2
+  - fribidi=1.0.10=h36c2ea0_0
   - gcc=12.4.0=h236703b_0
   - gcc_impl_linux-64=12.4.0=hb2e57f8_0
   - gcc_linux-64=12.4.0=h6b7512a_0
@@ -98,22 +109,31 @@ dependencies:
   - hypre=2.31.0=mpi_openmpi_h900e7ac_0
   - icu=73.2=h59595ed_0
   - idna=3.7=py311h06a4308_0
+  - imath=3.1.12=h7955e40_0
   - importlib-metadata=8.2.0=pyha770c72_0
   - importlib_metadata=8.2.0=hd8ed1ab_0
-  - ipykernel=6.29.5=py311h06a4308_1
-  - ipython=8.32.0=pyh907856f_0
+  - iniconfig=1.1.1=pyhd3eb1b0_0
+  - ipykernel=6.29.5=pyh3099207_0
+  - ipympl=0.9.3=py311h06a4308_0
+  - ipython=8.27.0=pyh707e725_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - ipywidgets=8.1.2=py311h06a4308_0
+  - itsdangerous=2.2.0=py311h06a4308_0
+  - jasper=4.2.4=h536e39c_0
   - jax=0.4.28=pyhd8ed1ab_0
   - jaxlib=0.4.28=cuda120py311had15d7a_200
-  - jedi=0.19.2=pyhd8ed1ab_1
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jinja2=3.1.4=py311h06a4308_0
   - joblib=1.4.2=pyhd8ed1ab_0
   - jsonpickle=2.2.0=py311h06a4308_0
-  - jupyter_client=8.6.3=pyhd8ed1ab_1
-  - jupyter_core=5.7.2=pyh31011fe_1
+  - jupyter_client=8.6.3=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=py311h38be061_0
+  - jupyterlab_widgets=3.0.10=py311h06a4308_0
   - kernel-headers_linux-64=3.10.0=h4a8ded7_16
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.4=py311h6a678d5_0
+  - kiwisolver=1.4.4=py311h4dd048b_1
   - krb5=1.21.3=h659f571_0
-  - lame=3.100=h7b6447c_0
+  - lame=3.100=h166bdaf_1003
   - lcms2=2.16=hb7c19ff_0
   - ld_impl_linux-64=2.40=hf3520f5_7
   - lerc=4.0.0=h27087fc_0
@@ -121,12 +141,13 @@ dependencies:
   - libaec=1.1.3=h59595ed_0
   - libasprintf=0.22.5=h661eb56_2
   - libasprintf-devel=0.22.5=h661eb56_2
+  - libass=0.17.3=h1dc1e6a_0
   - libblas=3.9.0=23_linux64_openblas
   - libboost=1.84.0=hba137d9_3
-  - libboost-headers=1.85.0=ha770c72_3
-  - libbrotlicommon=1.0.9=h5eee18b_8
-  - libbrotlidec=1.0.9=h5eee18b_8
-  - libbrotlienc=1.0.9=h5eee18b_8
+  - libboost-headers=1.85.0=ha770c72_4
+  - libbrotlicommon=1.0.9=h166bdaf_9
+  - libbrotlidec=1.0.9=h166bdaf_9
+  - libbrotlienc=1.0.9=h166bdaf_9
   - libcap=2.69=h0f662aa_0
   - libcblas=3.9.0=23_linux64_openblas
   - libclang-cpp15=15.0.7=default_h127d8a8_5
@@ -139,36 +160,59 @@ dependencies:
   - libcusolver=11.6.3.83=he02047a_0
   - libcusparse=12.5.1.3=he02047a_0
   - libdeflate=1.20=hd590300_0
+  - libdrm=2.4.124=hb9d3cd8_0
   - libedit=3.1.20191231=he28a2e2_2
+  - libegl=1.7.0=ha4b6fd6_0
   - libev=4.33=hd590300_2
-  - libevent=2.1.12=hdbd6064_1
+  - libevent=2.1.12=hf998b51_1
   - libexpat=2.6.2=h59595ed_0
   - libffi=3.4.2=h7f98852_5
   - libflac=1.4.3=h59595ed_0
-  - libgcc=14.2.0=h767d61c_2
+  - libgcc=14.1.0=h77fa898_1
   - libgcc-devel_linux-64=12.4.0=ha4f9413_100
-  - libgcc-ng=14.2.0=h69a702a_2
+  - libgcc-ng=14.1.0=h69a702a_1
   - libgcrypt=1.11.0=h4ab18f5_1
   - libgettextpo=0.22.5=h59595ed_2
   - libgettextpo-devel=0.22.5=h59595ed_2
   - libgfortran-ng=14.1.0=h69a702a_0
   - libgfortran5=14.1.0=hc5f4f2c_0
+  - libgl=1.7.0=ha4b6fd6_0
   - libglib=2.80.3=h8a4344b_1
-  - libgomp=14.2.0=h767d61c_2
+  - libglu=9.0.0=ha6d2627_1004
+  - libglvnd=1.7.0=ha4b6fd6_0
+  - libglx=1.7.0=ha4b6fd6_0
+  - libgomp=14.1.0=h77fa898_1
   - libgpg-error=1.50=h4f305b6_0
   - libgrpc=1.62.2=h15f2491_0
   - libhwloc=2.11.1=default_hecaa2ac_1000
   - libiconv=1.17=hd590300_2
   - libjpeg-turbo=3.0.3=h5eee18b_0
   - liblapack=3.9.0=23_linux64_openblas
+  - liblapacke=3.9.0=23_linux64_openblas
+  - libllvm14=14.0.6=hcd5def8_4
   - libllvm15=15.0.7=hb3ce162_4
   - libllvm18=18.1.8=h8b73ec9_1
   - libnghttp2=1.58.0=h47da74e_1
   - libnsl=2.0.1=hd590300_0
   - libnvjitlink=12.5.82=he02047a_0
-  - libogg=1.3.5=h27cfd23_1
+  - libogg=1.3.5=h4ab18f5_0
   - libopenblas=0.3.27=pthreads_hac2b453_1
-  - libopus=1.3.1=h7b6447c_0
+  - libopencv=4.10.0=qt5_py311h61ba98b_503
+  - libopenvino=2024.3.0=h2da1b83_0
+  - libopenvino-auto-batch-plugin=2024.3.0=hb045406_0
+  - libopenvino-auto-plugin=2024.3.0=hb045406_0
+  - libopenvino-hetero-plugin=2024.3.0=h5c03a75_0
+  - libopenvino-intel-cpu-plugin=2024.3.0=h2da1b83_0
+  - libopenvino-intel-gpu-plugin=2024.3.0=h2da1b83_0
+  - libopenvino-intel-npu-plugin=2024.3.0=h2da1b83_0
+  - libopenvino-ir-frontend=2024.3.0=h5c03a75_0
+  - libopenvino-onnx-frontend=2024.3.0=h07e8aee_0
+  - libopenvino-paddle-frontend=2024.3.0=h07e8aee_0
+  - libopenvino-pytorch-frontend=2024.3.0=he02047a_0
+  - libopenvino-tensorflow-frontend=2024.3.0=h39126c6_0
+  - libopenvino-tensorflow-lite-frontend=2024.3.0=he02047a_0
+  - libopus=1.3.1=h7f98852_1
+  - libpciaccess=0.18=hd590300_0
   - libpng=1.6.43=h2797004_0
   - libpq=16.3=ha72fbe1_0
   - libprotobuf=4.25.3=h08a7969_0
@@ -177,61 +221,76 @@ dependencies:
   - libsanitizer=12.4.0=h46f95d5_0
   - libscotch=7.0.4=h0c89965_2
   - libsndfile=1.2.2=hc60ed4a_1
-  - libsodium=1.0.20=h4ab18f5_0
+  - libsodium=1.0.18=h36c2ea0_1
   - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.0=h0841786_0
-  - libstdcxx=14.2.0=h8f9b012_2
+  - libstdcxx=14.1.0=hc0a3c3a_1
   - libstdcxx-devel_linux-64=12.4.0=ha4f9413_100
-  - libstdcxx-ng=14.2.0=h4852527_2
+  - libstdcxx-ng=14.1.0=h4852527_1
   - libsystemd0=255=h3516f8a_1
   - libtiff=4.6.0=h1dd3fc0_3
   - libuuid=2.38.1=h0b41bf4_0
-  - libvorbis=1.3.7=h7b6447c_0
+  - libva=2.22.0=h8a09558_1
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libvpx=1.14.1=hac33072_0
   - libwebp-base=1.4.0=hd590300_0
   - libxcb=1.16=hd590300_0
   - libxcrypt=4.4.36=hd590300_1
   - libxkbcommon=1.7.0=h2c5496b_1
   - libxml2=2.12.7=h4c95cb1_3
   - libzlib=1.3.1=h4ab18f5_1
-  - lz4-c=1.9.4=h6a678d5_1
-  - matplotlib=3.8.4=py311h06a4308_0
-  - matplotlib-base=3.8.4=py311ha02d727_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
+  - line_profiler=4.2.0=py311hd18a35c_0
+  - llvmlite=0.43.0=py311h6a678d5_0
+  - loguru=0.7.2=py311h38be061_2
+  - lz4-c=1.9.4=hcb278e6_0
+  - matplotlib=3.8.4=py311h38be061_2
+  - matplotlib-base=3.8.4=py311ha4ca890_2
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - memory_profiler=0.61.0=pyhd8ed1ab_1
   - metis=5.1.0=h59595ed_1007
   - ml_dtypes=0.4.0=py311h14de704_1
+  - moola=0.1.6=py_0
   - mpc=1.3.1=hfe3b2da_0
-  - mpfr=4.2.1=h9458935_1
+  - mpfr=4.2.1=h38ae2d0_2
   - mpg123=1.32.6=h59595ed_0
   - mpi=1.0=openmpi
   - mpi4py=3.1.6=py311h4267d7f_0
+  - mpld3=0.5.9=py311h06a4308_0
   - mpmath=1.3.0=pyhd8ed1ab_0
+  - mscorefonts=0.0.1=3
   - mumps-include=5.7.1=ha770c72_0
   - mumps-mpi=5.7.1=hcb8ae40_0
   - munch=2.5.0=pyhd3eb1b0_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - mysql-common=8.3.0=h70512c7_5
   - mysql-libs=8.3.0=ha479ceb_5
-  - nccl=2.22.3.1=hbc370b7_0
+  - nccl=2.22.3.1=hbc370b7_1
   - ncurses=6.5=h59595ed_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
   - nlopt=2.7.1=py311he50ff42_5
-  - nspr=4.35=h6a678d5_0
+  - nspr=4.35=h27087fc_0
   - nss=3.102=h593d115_0
-  - numexpr=2.10.1=py311hd28fd6d_0
+  - numba=0.60.0=py311h4bc866e_0
   - numpy=1.26.4=py311h64a7726_0
+  - ocl-icd=2.3.3=hb9d3cd8_0
+  - opencl-headers=2024.10.24=h5888daf_0
+  - opencv=4.10.0=qt5_py311h673e418_503
+  - openexr=3.2.2=h04e0de5_2
+  - openh264=2.4.1=h59595ed_0
   - openjpeg=2.5.2=h488ebb8_0
   - openmpi=4.1.6=hc5af2df_101
   - openssl=3.4.1=h7b32b05_0
   - opt-einsum=3.3.0=hd8ed1ab_2
   - opt_einsum=3.3.0=pyhc1e730c_2
-  - packaging=24.1=py311h06a4308_0
-  - pandas=2.2.3=py311h6a678d5_0
+  - packaging=24.1=pyhd8ed1ab_0
   - parmetis=4.0.3=he9a3056_1005
-  - parso=0.8.4=pyhd8ed1ab_1
+  - parso=0.8.4=pyhd8ed1ab_0
+  - patsy=1.0.1=pyhd8ed1ab_1
   - pcre2=10.44=h0f59acf_0
   - petsc=3.21.2=real_hd0ea2e5_100
   - petsc4py=3.21.2=py311he6cfc66_0
-  - pexpect=4.9.0=pyhd8ed1ab_1
-  - pickleshare=0.7.5=pyhd8ed1ab_1004
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
   - pillow=10.4.0=py311h82a398c_0
   - pint=0.24.4=pyhd8ed1ab_1
   - pint-pandas=0.7.1=pyhd8ed1ab_0
@@ -239,69 +298,89 @@ dependencies:
   - pixman=0.43.2=h59595ed_0
   - pkg-config=0.29.2=h4bc722e_1009
   - pkgconfig=1.5.5=pyhd8ed1ab_4
-  - platformdirs=4.3.6=pyhd8ed1ab_1
-  - ply=3.11=py311h06a4308_0
-  - prompt-toolkit=3.0.50=pyha770c72_0
-  - psutil=7.0.0=py311h9ecbd09_0
-  - pthread-stubs=0.3=h0ce48e5_1
+  - platformdirs=4.3.6=pyhd8ed1ab_0
+  - plotly=5.24.1=py311h92b7b1e_0
+  - pluggy=1.0.0=py311h06a4308_1
+  - ply=3.11=pyhd8ed1ab_2
+  - prompt-toolkit=3.0.47=pyha770c72_0
+  - psutil=6.0.0=py311h331c9d8_0
+  - pthread-stubs=0.3=1
   - ptscotch=7.0.4=hd53efc5_2
-  - ptyprocess=0.7.0=pyhd8ed1ab_1
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pugixml=1.14=h59595ed_0
   - pulseaudio-client=17.0=hb77b528_0
-  - pure_eval=0.2.3=pyhd8ed1ab_1
+  - pure_eval=0.2.3=pyhd8ed1ab_0
   - py-cpuinfo=9.0.0=py311h06a4308_0
+  - py-opencv=4.10.0=qt5_py311hfd853f2_503
   - pybind11=2.12.0=py311h9547e67_0
   - pybind11-global=2.12.0=py311h9547e67_0
   - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.19.1=pyhd8ed1ab_0
-  - pymongo=4.8.0=py311h5eee18b_0
-  - pyparsing=3.0.9=py311h06a4308_0
+  - pygments=2.18.0=pyhd8ed1ab_0
+  - pympler=0.9=py_0
+  - pynndescent=0.5.10=py311h06a4308_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
   - pyqt=5.15.10=py311h6a678d5_0
   - pyqt5-sip=12.13.0=py311h5eee18b_0
+  - pysocks=1.7.1=py311h06a4308_0
+  - pytest=7.4.4=py311h06a4308_0
   - python=3.11.9=hb806964_0_cpython
   - python-dateutil=2.9.0post0=py311h06a4308_2
-  - python-tzdata=2023.3=pyhd3eb1b0_0
+  - python-tzdata=2025.1=pyhd8ed1ab_0
   - python_abi=3.11=4_cp311
-  - pytz=2024.1=py311h06a4308_0
-  - pyzmq=26.2.1=py311h7deb3e3_0
+  - pyzmq=26.2.0=py311h7deb3e3_0
   - qt-main=5.15.8=h320f8da_24
   - re2=2023.09.01=h7f4b329_2
   - readline=8.2=h8228510_1
+  - requests=2.32.3=py311h06a4308_0
   - sacred=0.8.5=pyhd8ed1ab_0
   - scalapack=2.2.0=h67de57e_1
   - scikit-learn=1.5.1=py311hd632256_0
   - scipy=1.14.0=py311h517d4fd_1
   - scotch=7.0.4=hd53efc5_2
+  - seaborn=0.13.2=hd8ed1ab_3
+  - seaborn-base=0.13.2=pyhd8ed1ab_3
   - setuptools=71.0.4=pyhd8ed1ab_0
-  - sip=6.7.12=py311h6a678d5_0
+  - sip=6.7.12=py311hb755f60_0
   - six=1.16.0=pyh6c4a22f_0
   - slepc=3.21.1=real_h4e5f841_301
   - slepc4py=3.21.1=py311hc1ef5fc_101
   - smmap=4.0.0=pyhd3eb1b0_0
-  - stack_data=0.6.3=pyhd8ed1ab_1
+  - snappy=1.2.1=h8bd8927_1
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - statsmodels=0.14.2=py311h18e1886_0
   - suitesparse=7.7.0=hf4753ba_1
   - superlu=5.2.2=h00795ac_0
   - superlu_dist=8.2.1=h511944b_1
+  - svt-av1=2.2.1=h5888daf_0
   - sympy=1.13.0=pypyh2585a3b_103
   - sysroot_linux-64=2.17=h4a8ded7_16
   - tbb=2021.12.0=h434a139_3
   - threadpoolctl=3.5.0=pyhc1e730c_0
   - tk=8.6.13=noxft_h4845f30_101
-  - tornado=6.4.1=py311h5eee18b_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - tornado=6.4.1=py311h331c9d8_0
   - tqdm=4.66.4=py311h92b7b1e_0
-  - traitlets=5.14.3=pyhd8ed1ab_1
-  - typing-extensions=4.12.2=hd8ed1ab_1
-  - typing_extensions=4.12.2=pyha770c72_1
-  - tzdata=2024a=h0c530f3_0
-  - unicodedata2=15.1.0=py311h5eee18b_0
-  - wcwidth=0.2.13=pyhd8ed1ab_1
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - typing-extensions=4.12.2=hd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
+  - umap-learn=0.5.3=py311h06a4308_0
+  - unicodedata2=15.1.0=py311h459d7ec_0
+  - wayland=1.23.1=h3e06ad9_0
+  - wayland-protocols=1.42=hd8ed1ab_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.43.0=pyhd8ed1ab_1
+  - widgetsnbextension=4.0.10=py311h06a4308_0
   - wrapt=1.14.1=py311h5eee18b_0
+  - x264=1!164.3095=h166bdaf_2
+  - x265=3.5=h924138e_3
   - xcb-util=0.4.1=hb711507_2
   - xcb-util-image=0.4.0=hb711507_2
   - xcb-util-keysyms=0.4.1=hb711507_0
   - xcb-util-renderutil=0.3.10=hb711507_0
   - xcb-util-wm=0.4.2=hb711507_0
   - xkeyboard-config=2.42=h4ab18f5_0
+  - xorg-fixesproto=5.0=hb9d3cd8_1003
+  - xorg-inputproto=2.3.2=hb9d3cd8_1003
   - xorg-kbproto=1.0.7=h7f98852_1002
   - xorg-libice=1.1.1=hd590300_0
   - xorg-libsm=1.2.4=h7391055_0
@@ -309,17 +388,88 @@ dependencies:
   - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxfixes=5.0.3=h7f98852_1004
+  - xorg-libxi=1.7.10=h4bc722e_1
   - xorg-libxrender=0.9.11=hd590300_0
   - xorg-renderproto=0.11.1=h7f98852_1002
   - xorg-xextproto=7.3.0=h0b41bf4_1003
   - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
-  - xorg-xproto=7.0.31=h27cfd23_1007
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.6=h166bdaf_0
   - yaml=0.2.5=h7f98852_2
-  - zeromq=4.3.5=h3b0a872_7
+  - zeromq=4.3.5=h75354e8_4
   - zipp=3.19.2=pyhd8ed1ab_0
   - zlib=1.3.1=h4ab18f5_1
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
+      - anyio==4.6.0
+      - argon2-cffi==23.1.0
+      - argon2-cffi-bindings==21.2.0
+      - arrow==1.3.0
+      - async-lru==2.0.4
+      - attrs==24.2.0
+      - babel==2.16.0
+      - beautifulsoup4==4.12.3
+      - bleach==6.1.0
+      - blinker==1.8.2
+      - dash==2.18.1
+      - dash-bootstrap-components==1.6.0
+      - dash-core-components==2.0.0
+      - dash-html-components==2.0.0
+      - dash-table==5.0.0
+      - defusedxml==0.7.1
+      - dnspython==1.16.0
+      - fastjsonschema==2.20.0
+      - fqdn==1.5.1
+      - h11==0.14.0
+      - httpcore==1.0.5
+      - httpx==0.27.2
+      - incense==0.0.15
+      - isoduration==20.11.0
+      - json5==0.9.25
+      - jsonpointer==3.0.0
+      - jsonschema==4.23.0
+      - jsonschema-specifications==2023.12.1
+      - jupyter-events==0.10.0
+      - jupyter-lsp==2.2.5
+      - jupyter-server==2.14.2
+      - jupyter-server-terminals==0.5.3
+      - jupyterlab==4.2.5
+      - jupyterlab-pygments==0.3.0
+      - jupyterlab-server==2.27.3
+      - markupsafe==2.1.5
+      - mistune==3.0.2
+      - nbclient==0.10.0
+      - nbconvert==7.16.4
+      - nbformat==5.10.4
+      - notebook-shim==0.2.4
+      - overrides==7.7.0
+      - pandas==2.2.3
+      - pandocfilters==1.5.1
+      - prometheus-client==0.21.0
+      - pymongo==3.12.0
+      - pyrsistent==0.20.0
       - python-dotenv==1.0.1
-prefix: /home/graphitical/miniconda3/envs/meta_design
+      - python-json-logger==2.0.7
+      - pytz==2024.2
+      - pyyaml==6.0.2
+      - referencing==0.35.1
+      - retrying==1.3.4
+      - rfc3339-validator==0.1.4
+      - rfc3986-validator==0.1.1
+      - rpds-py==0.20.0
+      - send2trash==1.8.3
+      - sniffio==1.3.1
+      - soupsieve==2.6
+      - tenacity==9.0.0
+      - terminado==0.18.1
+      - tinycss2==1.3.0
+      - types-python-dateutil==2.9.0.20240906
+      - tzdata==2024.2
+      - uri-template==1.3.0
+      - urllib3==2.2.3
+      - webcolors==24.8.0
+      - webencodings==0.5.1
+      - websocket-client==1.8.0
+      - werkzeug==3.0.4
+prefix: /home/drevier/miniconda3/envs/meta_design
